# ColumbusEngine

./: .gitattributes  .gitignore  .gitmodules  ALSD  Buffer.cpp  CMakeLists.txt  Camera.cpp  Camera.h  Codegen.json  ColumbusEngine.sln  ColumbusEngine.vcxproj  ColumbusEngine.vcxproj.filters  CommonFunctions.cmake  Cubemap.cpp  Cubemap.h  Engine.h  EngineLib.cmake  EventSystem.cpp  EventSystem.h  ImplSDL.cpp  ImplSDL.h  Importer.h  Light.cpp  Light.h  Makefile  Material.cpp  Material.h  Model.cpp  Model.h  README.md  Render.cpp  Render.h  Shader.cpp  Shader.h  Skybox.cpp  Skybox.h  System.cpp  Texture.cpp  Texture.h  Vector2.h  (+11 more)
Animation/: Animation.h
Audio/: AudioDevice.cpp  AudioDevice.h  AudioListener.h  AudioMixer.cpp  AudioMixer.h  AudioPlayer.cpp  AudioPlayer.h  AudioSource.cpp  AudioSource.h  AudioSystem.cpp  AudioSystem.h  Filters.h
Core/: Assert.cpp  Assert.h  Asset.cpp  Asset.h  Blob.h  CVar.cpp  CVar.h  CommandLine.cpp  CommandLine.h  Core.cpp  Core.h  DataBlob.h  DragDrop.h  Event.h  FileDialog.h  FileInfo.h  Filesystem.cpp  Filesystem.h  Function.h  Game.h  Guid.cpp  Guid.h  Hash.h  ICloneable.h  ISerializable.h  Memory.h  Platform.h  PrototypeFactory.h  Random.h  Reflection.cpp  Reflection.h  Serialisation.cpp  Serialisation.h  Serialization.h  SmartPointer.h  StableSparseArray.h  Stacktrace.h  String.cpp  String.h  ThingRef.h  (+6 more)
DDGI/: CMakeLists.txt  DDGI.cpp  DDGI.h  Defines.h
Data/: 1.scene  2.scene  3.scene  4.scene  Shadows.scene  Sponza.scene
Editor/: CommonUI.cpp  CommonUI.h  Editor.cpp  Editor.h  Extension.h  FileDialog.cpp  FileDialog.h  FontAwesome.h  Gizmo.cpp  Gizmo.h  Grid.cpp  Grid.h  Icons.h  Menu.h  MessageBox.cpp  MessageBox.h  Panel.cpp  Panel.h  PanelAssets.cpp  PanelAssets.h  PanelConsole.cpp  PanelConsole.h  PanelHierarchy.cpp  PanelHierarchy.h  PanelInspector.cpp  PanelInspector.h  PanelProfiler.cpp  PanelProfiler.h  PanelRenderSettings.cpp  PanelRenderSettings.h  PanelScene.cpp  PanelScene.h  PanelTexture.cpp  PanelTexture.h  ResourcesViewerFunctions.h  ResourcesViewerMaterial.cpp  ResourcesViewerMaterial.h  ResourcesViewerMesh.cpp  ResourcesViewerMesh.h  ResourcesViewerShader.cpp  (+5 more)
EditorOld/: CommonUI.cpp  CommonUI.h  Editor.cpp  Extension.cpp  Gizmo.h  Grid.h  Menu.cpp  MessageBox.cpp  MessageBox.h  PanelAssets.cpp  PanelProfiler.cpp  PanelProfiler.h  PanelRenderSettings.cpp  PanelScene.h  ResourcesViewerMesh.h  ResourcesViewerTexture.h  Settings.cpp  Settings.h
GUI/: Button.cpp  Button.h  GUI.h  IO.h  VirtualInput.h  Widget.h
Game/: Game.cpp
Graphics/: AccelerationStructure.h  Billboard.h  BlendState.h  Buffer.cpp  Buffer.h  CPUScene.h  Camera.cpp  Camera.h  ComputePipeline.h  ComputePipelineState.h  Cubemap.cpp  Cubemap.h  DebugRender.cpp  DebugRender.h  DebugUI.cpp  DebugUI.h  DepthStencil.h  DepthStencilState.h  Device.cpp  Device.h  Framebuffer.cpp  Framebuffer.h  GPUScene.cpp  GPUScene.h  GraphicsPipeline.h  Importer.h  InputLayout.h  IrradianceVolume.h  LTC.h  Light.cpp  Light.h  Lightmaps.cpp  Lightmaps.h  Material.cpp  Material.h  Mesh.cpp  Mesh.h  MeshInstanced.h  Model.cpp  Model.h  (+47 more)
Impl/: EventSystem.cpp  EventSystem.h  ImplOpenGL.cpp  ImplOpenGL.h  ImplSDL.cpp  ImplSDL.h
Input/: EventSystem.cpp  EventSystem.h  Events.h  Input.cpp  Input.h
Lib/: CMakeLists.txt
Lib/Bullet/lib/: BulletCollision.lib  BulletDynamics.lib  BulletLinearMath.lib
Lib/Bullet/lib/Debug/: BulletLinearMath.lib
Lib/Bullet/lib/Release/: BulletCollision.lib  BulletDynamics.lib  BulletLinearMath.lib
Lib/FidelityFX-SDK/sdk/include/FidelityFX/gpu/dof/: ffx_dof_callbacks_glsl.h  ffx_dof_callbacks_hlsl.h
Lib/FidelityFX-SDK/sdk/src/backends/vk/: ffx_vk.cpp
Lib/LibJPEG/Lib/x86/: libjpeg.lib
Lib/LibPNG/Lib/Windows/x64/: LibPNG.lib
Lib/LibPNG/Lib/Windows/x86/: LibPNG.lib  a.lib  png.lib
Lib/LibPNG/lib/: png.lib
Lib/LibTIFF/Include/: tiffconf.h
Lib/LibTIFF/Lib/x86/: libtiff.lib  libtiff_i.lib
Lib/LibTIFF/lib/x64/: tiff.lib
Lib/ZLib/Lib/Windows/x64/: ZLib.lib
Lib/ZLib/Lib/Windows/x86/: ZLib.lib
Lib/ZLib/lib/: zlib.lib  zlibstatic.lib
Lib/ZSTD/Lib/: ZSTD.lib
Lib/bc7enc/: rgbcx_impl.cpp
Lib/compressonator/cmp_compressonatorlib/: CMakeLists.txt
Lib/compressonator/cmp_compressonatorlib/buffer/: codecbuffer_rgb888.cpp
Lib/dxc/windows/lib/arm64/: dxcompiler.lib  dxil.lib
Lib/dxc/windows/lib/x86/: dxcompiler.lib  dxil.lib
Lib/imgui/examples/: imgui_impl_opengl3.cpp  imgui_impl_opengl3.h  imgui_impl_sdl.cpp
Lib/imgui/misc/cpp/: imgui_stdlib.cpp
Materials/: Default.mtl  Gold.mtl
Math/: Box.cpp  Box.h  Frustum.h  Geometry.cpp  Geometry.h  InterpolationCurve.h  MathUtil.h  Matrix.h  Matrix4.h  OBB.h  Plane.h  Quaternion.h  RotationMatrix.h  ScaleMatrix.h  Serialization.h  TranslationMatrix.h  Vector2.h  Vector3.h  Vector4.h
Models/: nanosuit2.3ds
Physics/: PhysicsShape.h  PhysicsShapeBox.h  PhysicsShapeCapsule.h  PhysicsShapeCompound.h  PhysicsShapeCone.h  PhysicsShapeConvexHull.h  PhysicsShapeCylinder.h  PhysicsShapeMultiSphere.h  PhysicsShapeSphere.h  PhysicsWorld.cpp  PhysicsWorld.h  Rigidbody.cpp  Rigidbody.h  ShapesSerialization.cpp
Profiling/: Profiling.cpp  Profiling.h
ReflectionGenerator/: CMakeLists.txt  ReflectionGeneratorMain.cpp
RenderAPI/: APIOpenGL.cpp  APIOpenGL.h  Buffer.cpp  Buffer.h  RenderAPI.h  RenderAPIResources.h
RenderAPIOpenGL/: OpenGL.cpp  OpenGL.h
RequiredForBuild/: shader.csl
Resources/: ResourceManager.cpp  ResourceManager.h
Scene/: AssetImport.cpp  AssetImport.h  Component.cpp  Component.h  ComponentAudioSource.h  ComponentBillboard.h  ComponentLight.cpp  ComponentLight.h  ComponentMeshInstancedRenderer.cpp  ComponentMeshInstancedRenderer.h  ComponentMeshRenderer.cpp  ComponentMeshRenderer.h  ComponentParticleSystem.cpp  ComponentParticleSystem.h  ComponentRigidbody.cpp  ComponentRigidbody.h  GameObject.cpp  GameObject.h  GameObjectsHolder.h  LevelLightingAsset.cpp  LevelLightingAsset.h  LightComponent.cpp  LightComponent.h  MeshAsset.cpp  Scene.h  (+15 more)
ShaderBytecode/: CMakeLists.txt  ShaderBytecode.cpp  ShaderBytecode.h
ShaderCompiler/: CMakeLists.txt  ShaderCompilerMain.cpp
(+604 files in other folders)
